# fastAPI

./: .gitignore  instruções.md  pyproject.toml
Instruções/: 1 - configuração inicial.md  2 - introduzindos conceitos web.md  3 - CRUD.md
fast_api/: app.py
fast_api/config/: settings.py
fast_api/database/: database.py
fast_api/models/: __init__.py  company.py  users.py
fast_api/routers/: auth.py  company.py  users.py
fast_api/schemas/: __init__.py  company.py  enums.py  schemas.py  users.py
fast_api/security/: security.py
migrations/: env.py
migrations/versions/: 78cfb2be8edb_updating_model_company.py  9b28c1f9935e_create_user_table.py  b6e81e175946_initial.py  eaaf9b5b0318_create_company_route_model_schema.py
tests/: conftest.py  test_app.py  test_auth.py  test_company.py  test_models_db.py  test_security.py  test_users.py  teste_company.py
